force-app/main/default/objects/Assortment_BU__c/fields/Ass_BDate__c.field-meta.xml
<CustomField>
    <fullName>Ass_BDate__c</fullName>
    <label>Begin Date</label>
    <type>Date</type>
</CustomField>