force-app/main/default/objects/Assortment_BU__c/fields/Ass_EDate__c.field-meta.xml
<CustomField>
    <fullName>Ass_EDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>