force-app/main/default/objects/Assortment_BU__c/fields/Assortment__c.field-meta.xml
<CustomField>
    <fullName>Assortment__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landing</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Simul</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Statement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>