force-app/main/default/objects/Assortment_BU__c/fields/Assortment_parent__c.field-meta.xml
<CustomField>
    <fullName>Assortment_parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>DV Budget circuit - 1</inlineHelpText>
    <label>Parent Assortment</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>((1 AND 2) OR (3 AND 4) OR (5 AND 6)) AND 7 AND 8 AND 9 AND 10</booleanFilter>
        <errorMessage>Assortment_parent__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Assortment_BU__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Conso</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Conso, Conso Target, Conso Simulation</value>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Nego, Target, Simulation</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Like 4 Like, Nego, Target, Simulation, PR</value>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.BU_source__c</field>
            <operation>equals</operation>
            <valueField>$Source.BU_source__c</valueField>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.BU_Target__c</field>
            <operation>equals</operation>
            <valueField>$Source.BU_Target__c</valueField>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.Status__c</field>
            <operation>equals</operation>
            <value>Validated, Request for Approval</value>
        </filterItems>
        <filterItems>
            <field>Assortment_BU__c.Orga_HE__c</field>
            <operation>equals</operation>
            <valueField>$Source.Orga_HE__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Assortment_BU__c</referenceTo>
    <relationshipLabel>Assortiments BU (Parent Assortment)</relationshipLabel>
    <relationshipName>Assortment_BU</relationshipName>
    <type>Lookup</type>
</CustomField>