force-app/main/default/objects/Assortment_BU__c/fields/Assortment_type__c.field-meta.xml
<CustomField>
    <fullName>Assortment_type__c</fullName>
    <label>Assortment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>