force-app/main/default/objects/Assortment_BU__c/fields/Client_Clust1__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust1__c</fullName>
    <label>Client Clust1</label>
    <summaryFilterItems>
        <field>Assortment_Detail__c.Client_Clust1__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Assortment_Detail__c.Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>