force-app/main/default/objects/Assortment_BU__c/fields/Client_Clust3__c.field-meta.xml
<CustomField>
    <fullName>Client_Clust3__c</fullName>
    <label>Client Clust3</label>
    <summaryForeignKey>Assortment_Detail__c.Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>