force-app/main/default/objects/Assortment_BU__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Assortiments BU</relationshipLabel>
    <relationshipName>Assortiments_BU</relationshipName>
    <type>Lookup</type>
</CustomField>