force-app/main/default/objects/Assortment_BU__c/fields/Contract_Active_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active_Taxes__c</fullName>
    <description>Active Taxes from current (legacy) in Json format</description>
    <label>Contract Active Taxes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>