force-app/main/default/objects/Assortment_BU__c/fields/Discount_Rounding_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rounding_Level__c</fullName>
    <label>Discount Rounding Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rounding_Level</valueSetName>
    </valueSet>
</CustomField>