force-app/main/default/objects/Assortment_BU__c/fields/Fact_WD_MarketBased__c.field-meta.xml
<CustomField>
    <fullName>Fact_WD_MarketBased__c</fullName>
    <label>Fact WD MarketBased</label>
    <summarizedField>Assortment_Detail__c.Fact_WD_MarketBased__c</summarizedField>
    <summaryFilterItems>
        <field>Assortment_Detail__c.Version__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Assortment_Detail__c.Assortment_BU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>