force-app/main/default/objects/Assortment_BU__c/fields/Is_Target_All_Validated__c.field-meta.xml
<CustomField>
    <fullName>Is_Target_All_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for budget to evaulate if all related targets have been validated and alert about it. Field is filling by trigger</description>
    <label>Is Target All Validated</label>
    <type>Checkbox</type>
</CustomField>