force-app/main/default/objects/Assortment_BU__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>20000</length>
    <type>Html</type>
</CustomField>