force-app/main/default/objects/Assortment_BU__c/fields/Master_Assortment__c.field-meta.xml
<CustomField>
    <fullName>Master_Assortment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Define the parent of assortments generated from a national assortment.</description>
    <inlineHelpText>Define the parent of assortments generated from a national assortment.</inlineHelpText>
    <label>Master Assortment</label>
    <referenceTo>Assortment_BU__c</referenceTo>
    <relationshipName>Assortment_BU_Master</relationshipName>
    <type>Lookup</type>
</CustomField>