force-app/main/default/objects/Assortment_BU__c/fields/Merch_Family__c.field-meta.xml
<CustomField>
    <fullName>Merch_Family__c</fullName>
    <label>Merch Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Merch_Family</valueSetName>
    </valueSet>
</CustomField>