force-app/main/default/objects/Assortment_BU__c/fields/Orga_HE__c.field-meta.xml
<CustomField>
    <fullName>Orga_HE__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product hierarchy</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Orga_HE__c - Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Orga_HE__c.Set_Assortment_nego_level__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Orga_HE__c</referenceTo>
    <relationshipLabel>Assortiments BU</relationshipLabel>
    <relationshipName>Assortment_BU</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>