force-app/main/default/objects/Assortment_BU__c/fields/Simulation_version__c.field-meta.xml
<CustomField>
    <fullName>Simulation_version__c</fullName>
    <label>Simulation version</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>