force-app/main/default/objects/Assortment_BU__c/fields/SPKERC_SumNewClientProductNumberGap__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_SumNewClientProductNumberGap__c</fullName>
    <description>It is the sum of New Client ProductNumber Gap YE field</description>
    <label>Ecart PDV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>