force-app/main/default/objects/Assortment_BU__c/fields/SPKERC_SumNewClientQuantityYE__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_SumNewClientQuantityYE__c</fullName>
    <description>It is the sum of new client quantity YE field</description>
    <label>Quantités +/-</label>
    <summarizedField>Assortment_Detail__c.New_Client_Quantity_YE__c</summarizedField>
    <summaryForeignKey>Assortment_Detail__c.Assortment_BU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>