force-app/main/default/objects/Assortment_BU__c/fields/SPKERC_SumNewClientWDMarketBasedGap__c.field-meta.xml
<CustomField>
    <fullName>SPKERC_SumNewClientWDMarketBasedGap__c</fullName>
    <label>Ecart DV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>