force-app/main/default/objects/Assortment_BU__c/fields/WD_Equal_Null_Counter__c.field-meta.xml
<CustomField>
    <fullName>WD_Equal_Null_Counter__c</fullName>
    <label>WD_Equal_Null_Counter</label>
    <summaryFilterItems>
        <field>Assortment_Detail__c.Version__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Assortment_Detail__c.New_Client_WD_MarketBased__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Assortment_Detail__c.Assortment_BU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>