force-app/main/default/objects/Assortment_BU__c/fields/WD_Target_Validated_Sum__c.field-meta.xml
<CustomField>
    <fullName>WD_Target_Validated_Sum__c</fullName>
    <description>For Budget only. Give the WD sum of all related target when all targets have been validated</description>
    <label>WD Target Validated Sum</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>