force-app/main/default/objects/Assortment_BU__c/recordTypes/Budget.recordType-meta.xml
<RecordType>
    <fullName>Budget</fullName>
    <active>true</active>
    <description>Objective (or budget) between the group and the market base</description>
    <label>Budget</label>
</RecordType>