force-app/main/default/objects/Assortment_BU__c/recordTypes/Conso.recordType-meta.xml
<RecordType>
    <fullName>Conso</fullName>
    <active>true</active>
    <description>Aggregate client segmented assortments</description>
    <label>Conso</label>
</RecordType>