force-app/main/default/objects/Assortment_BU__c/recordTypes/Conso_Simulation.recordType-meta.xml
<RecordType>
    <fullName>Conso_Simulation</fullName>
    <active>true</active>
    <description>Aggregate client segmented simulation assortments</description>
    <label>Conso Simulation</label>
</RecordType>