force-app/main/default/objects/Assortment_BU__c/recordTypes/Conso_Target.recordType-meta.xml
<RecordType>
    <fullName>Conso_Target</fullName>
    <active>true</active>
    <description>Aggregate client segmented target assortments</description>
    <label>Conso Target</label>
</RecordType>