force-app/main/default/objects/Assortment_BU__c/recordTypes/L4L.recordType-meta.xml
<RecordType>
    <fullName>L4L</fullName>
    <active>true</active>
    <description>Identical reproduction of the client WD with the WD of the new year</description>
    <label>Like 4 Like</label>
</RecordType>