force-app/main/default/objects/Assortment_BU__c/recordTypes/Nego.recordType-meta.xml
<RecordType>
    <fullName>Nego</fullName>
    <active>true</active>
    <description>Objective (budget) construction for the client</description>
    <label>Nego</label>
</RecordType>