force-app/main/default/objects/Assortment_BU__c/recordTypes/Panel.recordType-meta.xml
<RecordType>
    <fullName>Panel</fullName>
    <active>false</active>
    <description>Assortments with Panelist data only</description>
    <label>Panel</label>
</RecordType>