force-app/main/default/objects/Assortment_BU__c/recordTypes/PR.recordType-meta.xml
<RecordType>
    <fullName>PR</fullName>
    <active>true</active>
    <description>Copy of Target</description>
    <label>PR</label>
</RecordType>