force-app/main/default/objects/Assortment_BU__c/recordTypes/Simulation.recordType-meta.xml
<RecordType>
    <fullName>Simulation</fullName>
    <active>true</active>
    <description>for any simulation, used automatically when cloning Target Assortment</description>
    <label>Simulation</label>
</RecordType>