force-app/main/default/objects/Assortment_BU__c/recordTypes/Target.recordType-meta.xml
<RecordType>
    <fullName>Target</fullName>
    <active>true</active>
    <description>Objective declination on a banner</description>
    <label>Target</label>
</RecordType>