force-app/main/default/objects/Assortment_BU__c/validationRules/No_Org_HE_update_from_specfic_profil.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Org_HE_update_from_specfic_profil</fullName>
    <active>true</active>
    <description>Vous n&apos;avez pas l&apos;autorisation de modifier l&apos;hiérarchie articles.</description>
    <errorConditionFormula>ISCHANGED( Orga_HE__c  ) &amp;&amp; ($Profile.Name = &apos;DDC&apos;) &amp;&amp;  (RecordType.DeveloperName = &apos;Nego&apos; || RecordType.DeveloperName = &apos;Target&apos;)</errorConditionFormula>
    <errorDisplayField>Orga_HE__c</errorDisplayField>
    <errorMessage>Vous n&apos;avez pas l&apos;autorisation de modifier l&apos;hiérarchie articles.</errorMessage>
</ValidationRule>