force-app/main/default/objects/Assortment_BU__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assortment_type__c</columns>
    <columns>Simulation_version__c</columns>
    <columns>Year__c</columns>
    <columns>Master_Assortment__c</columns>
    <columns>Assortment_parent__c</columns>
    <columns>BU_Target__c</columns>
    <columns>Orga_HE__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>