force-app/main/default/objects/Assortment_BU__c/listViews/Ass_N_go_2023.listView-meta.xml
<ListView>
    <fullName>Ass_N_go_2023</fullName>
    <columns>NAME</columns>
    <columns>Orga_HE__c</columns>
    <columns>Assortment_type__c</columns>
    <columns>Year__c</columns>
    <columns>Assortment_parent__c</columns>
    <columns>BU_Target__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assortment_BU__c.Nego</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2023</value>
    </filters>
    <label>Ass Négo 2023</label>
</ListView>