force-app/main/default/objects/Assortment_BU__c/listViews/Cadrage_2024.listView-meta.xml
<ListView>
    <fullName>Cadrage_2024</fullName>
    <columns>NAME</columns>
    <columns>Orga_HE__c</columns>
    <columns>Assortment_type__c</columns>
    <columns>Year__c</columns>
    <columns>Assortment_parent__c</columns>
    <columns>BU_Target__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Assortment_BU__c.Budget</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2024</value>
    </filters>
    <label>Cadrage 2024</label>
</ListView>