force-app/main/default/objects/Assortment_BU__c/listViews/Current.listView-meta.xml
<ListView>
    <fullName>Current</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Assortment_type__c</columns>
    <columns>Simulation_version__c</columns>
    <columns>Year__c</columns>
    <columns>Master_Assortment__c</columns>
    <columns>Assortment_parent__c</columns>
    <columns>BU_Target__c</columns>
    <columns>Orga_HE__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Ass_BDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Actuels</label>
</ListView>